Fixes white space issue, updates gulp
- Fixes white space issue for markup example
- Updates gulp tasks so style guide sass is compiled too
- Removes import from style guide main scss file

--- a/kss-assets/sass/_kss-syntax.scss
+++ b/kss-assets/sass/_kss-syntax.scss
@@ -19,7 +19,7 @@
   }
 
   pre code {
-    white-space: inherit;
+    white-space: pre-wrap;
   }
 
   pre .comment {
